--- a/Hasil-Buruk-Selalu-Diterima-Dimas.html
+++ b/Hasil-Buruk-Selalu-Diterima-Dimas.html
@@ -258,7 +258,7 @@
 </main>
 <footer>
     <div class="container">
-        <div class="footer-text">&copy; 2024 <a href="https://informasi-media.github.io/digital/Hasil-Buruk-Selalu-Diterima-Dimas.html">Analisa Github Koran Digital</a>. All Rights Reserved. 18+</div>
+        <div class="footer-text">&copy; 2024 <a href="https://informasi-media.github.io/digital/Hasil-Buruk-Selalu-Diterima-Dimas.html">Hasil Buruk Selalu Diterima Dimas</a>. All Rights Reserved. 18+</div>
     </div>
 </footer>
 <div class="nav">
