--- a/Ikutilah-Jejak-Rekam-Dari-Mas-Asraff.html
+++ b/Ikutilah-Jejak-Rekam-Dari-Mas-Asraff.html
@@ -258,7 +258,7 @@
 </main>
 <footer>
     <div class="container">
-        <div class="footer-text">&copy; 2024 <a href="https://informasi-media.github.io/digital/Ikutilah-Jejak-Rekam-Dari-Mas-Asraff.html">Analisa Github Koran Digital</a>. All Rights Reserved. 18+</div>
+        <div class="footer-text">&copy; 2024 <a href="https://informasi-media.github.io/digital/Ikutilah-Jejak-Rekam-Dari-Mas-Asraff.html">Ikutilah Jejak Rekam Dari Mas Asraff</a>. All Rights Reserved. 18+</div>
     </div>
 </footer>
 <div class="nav">
