--- a/PG-Soft-Ulang-Tahun.html
+++ b/PG-Soft-Ulang-Tahun.html
@@ -260,7 +260,7 @@
 </main>
 <footer>
     <div class="container">
-        <div class="footer-text">&copy; 2024 <a href="https://informasi-media.github.io/digital/PG-Soft-Ulang-Tahun.html">Analisa Github Koran Digital</a>. All Rights Reserved. 18+</div>
+        <div class="footer-text">&copy; 2024 <a href="https://informasi-media.github.io/digital/PG-Soft-Ulang-Tahun.html">PG Soft Ulang Tahun</a>. All Rights Reserved. 18+</div>
     </div>
 </footer>
 <div class="nav">
