--- a/Satpam-Salah-Satu-Mall-Di-Batam-Sedang-Tugas-Malam.html
+++ b/Satpam-Salah-Satu-Mall-Di-Batam-Sedang-Tugas-Malam.html
@@ -261,7 +261,7 @@
 </main>
 <footer>
     <div class="container">
-        <div class="footer-text">&copy; 2024 <a href="https://informasi-media.github.io/digital/Satpam-Salah-Satu-Mall-Di-Batam-Sedang-Tugas-Malam.html">Analisa Github Koran Digital</a>. All Rights Reserved. 18+</div>
+        <div class="footer-text">&copy; 2024 <a href="https://informasi-media.github.io/digital/Satpam-Salah-Satu-Mall-Di-Batam-Sedang-Tugas-Malam.html">Satpam Salah Satu Mall Di Batam Sedang Tugas Malam</a>. All Rights Reserved. 18+</div>
     </div>
 </footer>
 <div class="nav">
